adding a reset css file

--- a/challenge/starter/index.html
+++ b/challenge/starter/index.html
@@ -20,7 +20,7 @@
         <li> <a href="#about">About me</a> </li>
         <li> <a href="#work">Work</a> </li>
         <li> <a href="#contact">Contact</a> </li>
-        <li> <a href="#resume">Resume</a></li>
+        <!-- <li> <a href="#Resume">Resume</a></li> I have removed this as ReadMe doesn't state this as a requirement -->
       </ul>
     </nav>
   </header>
@@ -104,10 +104,13 @@
 
   </section>
 
-  <!-- CV -->
+  <!-- CV
   <section class="page-section cv" id="cv">
     <h2>CV</h2>
-  </section>
+    <div>
+      <p href="ADD CV HERE">Click here to view and download my CV</p>
+    </div>
+  </section> I have removed this as ReadMe doesn't state this as a requirement -->
 
   <!-- * When images of the applications are clicked then the user is taken to that deployed application -->
   <!-- * When the page is resized or viewed on various screens and devices then the layout is responsive and adapts to my viewport -->
