getting grid within work container

--- a/challenge/starter/index.html
+++ b/challenge/starter/index.html
@@ -50,7 +50,7 @@
       </div>
     </section>
 
-    <!-- portfolio container -->
+    <!-- Portfolio container -->
     <section class="page-section-work" id="work">
       <h2>Work</h2>
       <!-- * When viewing the section about your work then the section contains titled images of your applications -->
@@ -99,7 +99,7 @@
       <p href="555.555.5555">555.555.5555</p>
       <a href="www.linkedin.com/in/lilij">LinkedIn</a>
       <a href="https://github.com/LiliBear1">Github</a>
-      <p href="ADDEMAILHERE">email@email.com</p>
+      <p href="testemail@email.com">testemail@email.com</p>
     </div>
   </section>
 
