--- a/challenge/starter/index.html
+++ b/challenge/starter/index.html
@@ -50,7 +50,7 @@
       </div>
     </section>
 
-    <!-- Portfolio container -->
+    <!-- portfolio container -->
     <section class="page-section-work" id="work">
       <h2>Work</h2>
       <!-- * When viewing the section about your work then the section contains titled images of your applications -->
@@ -96,11 +96,12 @@
   <section class="page-section contact" id="contact">
     <h2>Contact Me</h2>
     <div>
-      <p href="555.555.5555">555.555.5555</p>
-      <a href="www.linkedin.com/in/lilij">LinkedIn</a>
+      <a href="tel:555.555.5555">555.555.5555</a>
+      <a href="https://www.linkedin.com/in/lilij">LinkedIn</a>
       <a href="https://github.com/LiliBear1">Github</a>
-      <p href="testemail@email.com">testemail@email.com</p>
+      <a href="mailto:email@email.com">email@email.com</a>
     </div>
+    
   </section>
 
   </section>
